--- a/anabolicavote/src/app/general/index/index.component.html
+++ b/anabolicavote/src/app/general/index/index.component.html
@@ -51,7 +51,7 @@
         </mat-form-field><br>
         <button mat-raised-button type="submit">Inloggen</button>
         <div>
-            <a href="">Nog geen account? Registreer hier.</a>
+            <a mat-button href="">Nog geen account? Registreer hier.</a>
         </div>
     </mat-card-content>
 </mat-card>
