--- a/anabolicavote/src/app/navigation/toolbar/toolbar.component.html
+++ b/anabolicavote/src/app/navigation/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span>Virtuele Verkiezingen</span>
+    <span><a mat-button href="">Virtuele Verkiezingen</a></span>
     <span class="example-spacer"></span>
     <mat-menu #appMenu="matMenu">
         <button mat-menu-item>Settings</button>
