--- a/anabolicavote/src/app/admin/session-dashboard/session-dashboard.component.html
+++ b/anabolicavote/src/app/admin/session-dashboard/session-dashboard.component.html
@@ -1,4 +1,4 @@
-<button mat-button [routerLink]="../">TERUG</button>
+<button mat-button [routerLink]="['..']">TERUG</button>
 <mat-card>
     <mat-card-title>
         Nieuwe Ronde starten:
